# lidar

./: .claude.md  .gitignore  calibrate_intrinsic.py  rebuild.md  scene_config_framework.md  startup.sh  test_with_rosbag.sh  开发问题记录.md  硬件连接与启动指南.md  项目架构与实现思路详解.md
config/: 2_elevation_16bit_n0d187m_1d445m_20260520_083848_meta.yaml  camera_params.yaml  dynamic_crop.yaml  elevation_meta.yaml  field_params.yaml  gicp_crop.yaml  map.yaml  radar_config.yaml  read.py  show_tiff.py
config/elevation/: 3.tiff  3_elevation_gray256_meta.yaml  grid_height_20x20.csv
config/params/: dynamic_crop.yaml  elevation_meta.yaml  field_params.yaml  gicp_crop.yaml
config/scripts/: CloudCompare处理指南.md  bag_to_pcd.py  calibrate_extrinsic.py  calibrate_intrinsic.py  grid_height.py  grid_height_table.py  pcd_to_config.py  tiff_to_elevation_png.py
rosbag/field_map/: metadata.yaml
rosbag/field_map1/: metadata.yaml
rosbag/rosbag/: metadata.yaml
src/fusion/debug_map/: debug_map.cpp
src/fusion/kalman_filter/include/: filter_plus.h  kalman_filter.h
src/fusion/kalman_filter/src/: kalman_filter.cpp
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/src/: hik_camera_node.cpp
src/interface/vision_interface/msg/: DetectResult.msg
src/lidar/dynamic_cloud/: package.xml
src/lidar/localization/: package.xml
src/livox_driver/livox_sdk_vendor/: CMakeLists.txt
src/tdt_vision/launch/: map_server_launch.py  radar.launch.py  run_rosbag.launch.py
src/utils/rosbag_player/: rosbag_player.cpp
tools/: bag_to_pcd.cpp  bag_to_pcd.py  pcd_to_config.cpp  pcd_to_csv.cpp
(+31 files in other folders)
